--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 
 @layer utilities {
   .prose h1 {
-    @apply py-12 text-5xl font-playfair text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-pink-400 to-purple-400;
+    @apply py-12 text-5xl font-medium font-playfair italic text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-pink-400 to-purple-400;
   }
 
   .prose h2 {
