--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,10 @@
 }
 
 @layer utilities {
+  .prose {
+    @apply max-w-full;
+  }
+
   .prose h1 {
     @apply py-12 text-5xl font-medium font-playfair italic text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-pink-400 to-purple-400;
   }
