--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,30 @@
   }
 }
 
+@layer components {
+  .bg-grid-light {
+    background-size: 40px 40px;
+    background-image: linear-gradient(
+        to right,
+        theme("colors.gray.200") 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, theme("colors.gray.200") 1px, transparent 1px);
+    background-position: calc(100% + 20px) calc(100% + 20px);
+  }
+
+  .bg-grid-dark {
+    background-size: 40px 40px;
+    background-image: linear-gradient(
+        to right,
+        theme("colors.gray.900") 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, theme("colors.gray.900") 1px, transparent 1px);
+    background-position: calc(100% + 20px) calc(100% + 20px);
+  }
+}
+
 @layer utilities {
   .prose {
     @apply max-w-full;
