changed grid color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,17 @@
       linear-gradient(to bottom, theme("colors.gray.900") 1px, transparent 1px);
     background-position: calc(100% + 20px) calc(100% + 20px);
   }
+
+  .bg-grid-meta {
+    background-size: 40px 40px;
+    background-image: linear-gradient(
+        to right,
+        theme("colors.gray.800") 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, theme("colors.gray.800") 1px, transparent 1px);
+    background-position: calc(100% + 20px) calc(100% + 20px);
+  }
 }
 
 @layer utilities {
